Implement condition factories for AndCondition and OrCondition, add InvertedCondition class, and introduce Bootstrap class for plugin initialization
Signed-off-by: Teofilo Jr. Daquipil <me@lemonypancakes.me>

--- a/src/main/resources/paper-plugin.yml
+++ b/src/main/resources/paper-plugin.yml
@@ -1,7 +1,5 @@
 name: Races
 version: '${version}'
-api-version: '1.21'
+bootstrapper: me.lemonypancakes.races.Bootstrap
 main: me.lemonypancakes.races.RacesPlugin
-authors:
-  - LemonyPancakes
-folia-supported: true
+api-version: '1.21'
