--- a/src/main/resources/paper-plugin.yml
+++ b/src/main/resources/paper-plugin.yml
@@ -1,5 +1,8 @@
 name: Races
 version: '${version}'
-bootstrapper: me.lemonypancakes.races.Bootstrap
-main: me.lemonypancakes.races.RacesPlugin
 api-version: '1.21'
+bootsrapper: me.lemonypancakes.races.bootstrap.Bootstrap
+main: me.lemonypancakes.races.plugin.PaperPlugin
+authors:
+  - LemonyPancakes
+folia-supported: true
