--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,7 +1,7 @@
 name: Races
 version: '${version}'
 api-version: '1.21'
-main: me.lemonypancakes.races.RacesPlugin
+main: me.lemonypancakes.races.plugin.PaperPlugin
 authors:
   - LemonyPancakes
 folia-supported: true
