Refactor JsonObject parameter names for clarity and consistency across multiple classes

--- a/src/main/resources/paper-plugin.yml
+++ b/src/main/resources/paper-plugin.yml
@@ -2,8 +2,6 @@ name: Races
 version: '${version}'
 authors: [ LemonyPancakes ]
 
-bootstrapper: me.lemonypancakes.races.bootstrap.Bootstrap
-main: me.lemonypancakes.races.plugin.PaperPlugin
-
-folia-supported: true
+bootstrapper: me.lemonypancakes.races.RacesBootstrap
+main: me.lemonypancakes.races.RacesPlugin
 api-version: '1.21'
