--- a/src/main/resources/paper-plugin.yml
+++ b/src/main/resources/paper-plugin.yml
@@ -2,6 +2,8 @@ name: Races
 version: '${version}'
 authors: [ LemonyPancakes ]
 
-bootstrapper: me.lemonypancakes.races.RacesBootstrap
-main: me.lemonypancakes.races.RacesPlugin
+bootstrapper: me.lemonypancakes.races.bootstrap.RacesBootstrap
+main: me.lemonypancakes.races.plugin.RacesPlugin
 api-version: '1.21'
+
+folia-supported: true
